[gd_scene load_steps=2 format=2]

[ext_resource path="res://interfaces/UserInterface.gd" type="Script" id=1]

[node name="UserInterface" type="Control"]
anchor_right = 1.0
margin_left = 110.0
margin_right = -110.0
margin_bottom = 180.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 150.0
margin_top = 60.0
margin_right = -30.0
margin_bottom = 170.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommitLabel" type="Label" parent="HBoxContainer"]
margin_right = 440.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Code to merge: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReleaseLabel" type="Label" parent="HBoxContainer"]
margin_left = 540.0
margin_right = 980.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Missed Releases: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
margin_left = 1080.0
margin_right = 1520.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Score: %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
